--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,32 @@ name: Django tree menu workflow
 on: push
 
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install flake8 isort
+          pip install -r requirements.txt
+
+      - name: Test with isort
+        run: |
+          isort --check-only menu_project/
+
+      - name: Test with flake8
+        run: |
+          flake8 menu_project/
+
   send_message:
     runs-on: ubuntu-latest
+    needs: tests
     steps:
       - name: Send message
         uses: appleboy/telegram-action@master
